changed search-engine-optimization inside <section> for class= to search-online social in html and css for less confusion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ section {
     max-width: 150px;
 }
 
-.search-engine-optimization {
+.search-online-social {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -144,12 +144,12 @@ section {
 }
 
 
-.search-engine-optimization img {
+.search-online-social img {
     max-height: 200px;
 }
 
 
-.search-engine-optimization h2 {
+.search-online-social h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
