--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,19 +86,19 @@ aside {
     background-color: #2589bd;
 }
 
-.lead-brand-cost {
+.benefits {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
 
-.lead-brand-cost h3 {
+.benefits h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
 
-.lead-brand-cost img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
