changed the name search-online-social to main-content in both html and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ aside {
 }
 
 
-.search-online-social {
+.main-content {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -115,12 +115,12 @@ aside {
 }
 
 
-.search-online-social img {
+.main-content img {
     max-height: 200px;
 }
 
 
-.search-online-social h2 {
+.main-content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
